--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Groovy">
-        <activity android:name=".playlist.MainActivity"
+        <activity android:name=".MainActivity"
             android:label="Playlists">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
